<resources>
    <string name="app_name">Lab2Calculator</string>
    <string name="button_07">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="buttonAdd">+</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="buttonMinus">-</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClear">C</string>
    <string name="button_00">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonMultiply">x</string>
</resources>