<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="48sp"
            android:minHeight="48dp"
            android:text=" " />

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_07"
                android:textSize="48sp" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_09" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:backgroundTint="#009688"
                android:onClick="btnAddClick"
                android:text="@string/buttonAdd"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:backgroundTint="#009688"
                android:onClick="btnMinusClick"
                android:text="@string/buttonMinus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"

                android:onClick="OnClickNumericalButton"

                android:text="@string/button_03" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:backgroundTint="#009688"
                android:onClick="btnDivideClick"
                android:text="@string/buttonDivide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="btnClearClick"
                android:text="@string/buttonClear" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"

                android:text="@string/button_00" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:onClick="OnClickNumericalButton"
                android:text="@string/buttonDot" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:textSize="48sp"
                android:backgroundTint="#009688"
                android:onClick="btnMultiplyClick"
                android:text="@string/buttonMultiply" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B13F1B"
            android:onClick="btnResultClick"
            android:text="="
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>